# vulcan-core

./: .actrc  .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  justfile  pyproject.toml  template-configuration-needed
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh  post-install.sh  post-start.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-problem-report.md  02-feature-request.md  config.yml
.github/actions/prepare/: action.yml
.github/actions/tests/: action.yml
.github/prompts/: Editorial Review.prompt.md
.github/workflows/: ci-build.yml  ci-publish.yml  copilot-setup-steps.yml  workflows.md
dockerfiles/: actimage.dockerfile
src/vulcan_core/: __init__.py  actions.py  ast_utils.py  conditions.py  engine.py  models.py  reporting.py  util.py
tests/: __init__.py  conftest.py
tests/core/: test_actions.py  test_ast_utils.py  test_conditions.py  test_engine.py  test_expressions.py  test_models.py  test_reports.py
tests/core/fixtures/: rule_loading.py
utils/: pyvers.py
