# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Latchfield Technologies http://latchfield.com
[project]
name = "vulcan-core"
version="1.2.1"
license="Apache-2.0"
description = "AI-Hybrid Rules Engine for Logical Reasoning."
readme = "README.md"
authors = []
keywords = ["rules", "logic", "reasoning", "ai", "artificial intelligence", "RAG", "LLM"]
requires-python = ">=3.12,<4.0"
dependencies = ["pyyaml (>=6.0.2,<7.0.0)",
                "pydantic (>=2.11.7,<3.0.0)",
                "langchain==0.3.*",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
openai = [
  "langchain-openai==0.3.*"
]


[project.urls]
homepage = "https://latchfield.com/vulcan"
repository = "https://github.com/latchfield/vulcan-core"
documentation = "https://latchfield.com/vulcan/docs"

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.uv]
required-version = "==0.9.*"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "N", "UP",
          "SIM", "YTT", "ASYNC", "S", "A", "COM", "FBT",
          "C4", "DTZ", "T10", "EM", "DJ", "EXE", "ISC",
          "ICN", "LOG", "G", "INP", "PIE", "PT", "RSE",
          "SLF", "TCH", "INT", "PD", "TRY", "PERF1", "PERF4",
          "FURB", "RUF"]

# Recommended ignore list: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["E111", "E114", "E117", "D206", "D300", "Q000",
          "Q001", "Q002", "Q003", "COM812", "COM819",
          "ISC001", "ISC002", "S311"]

# Ignore some rules for tests
# https://github.com/astral-sh/ruff/issues/4368#issue-1705468153
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "FBT"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyright]
typeCheckingMode = "basic"
reportUndefinedVariable = false

[tool.pytest.ini_options]
minversion = "8.3"
required_plugins = ["pytest-cov"]
pythonpath = ["src"]
addopts = "-rA --showlocals --color=yes --tb=short -q --cov-report=html --cov=src"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
branch = true # Could be an issue if true for native decoration: https://github.com/microsoft/vscode-python/issues/24156

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "lab"},
  {include-group = "tools"},
]
lint = [
    "bandit==1.9.*",
    "deptry==0.24.*",
    "ruff==0.14.*",
    "pyright[nodejs]==1.1.402",
]
test = [
    "pytest==8.4.*",
    "pytest-asyncio==1.0.*",
    "pytest-timeout==2.4.*",
    "pytest-cov==6.2.*",
    "pytest-xdist==3.7.*",
    "doppler-env==0.3.*",
    "langchain-chroma==0.2.*"
]
lab = [
    "ipykernel==6.*",
    "ipywidgets==8.1.*",
]
tools = [
    "tldr",
    "twine==6.1.*"
]
