# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Latchfield Technologies http://latchfield.com
[project]
name = "vulcan-core"
dynamic = ["version"]
license="Apache-2.0"
description = "AI-Hybrid Rules Engine for Logical Reasoning."
readme = "README.md"
authors = []
keywords = ["rules", "logic", "reasoning", "ai", "artificial intelligence", "RAG", "LLM"]
requires-python = ">=3.12,<3.15"
dependencies = ["pyyaml(>=6.0.1,<=6.1)",
                "pydantic(>=2.0,<=2.13)",
                "langchain(>=1.0,<1.3)",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
openai = [
  "langchain-openai(>=1.0,<=1.2)"
]

[project.urls]
homepage = "https://latchfield.com/vulcan"
repository = "https://github.com/latchfield/vulcan-core"
documentation = "https://latchfield.com/vulcan/docs"

[build-system]
requires = ["hatchling==1.28.*","hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/vulcan_core/__about__.py"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.uv]
required-version = "==0.9.*"
python-preference = "only-managed"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]
# no-build = true # Doesn't work currently https://github.com/astral-sh/uv/issues/17416
# no-binary-package = ["vulcan-core"] # Workaround for sync issue https://github.com/astral-sh/uv/issues/17416

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "N", "UP",
          "SIM", "YTT", "ASYNC", "S", "A", "COM", "FBT",
          "C4", "DTZ", "T10", "EM", "DJ", "EXE", "ISC",
          "ICN", "LOG", "G", "INP", "PIE", "PT", "RSE",
          "SLF", "TCH", "INT", "PD", "TRY", "PERF1", "PERF4",
          "FURB", "RUF"]

# Recommended ignore list: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["E111", "E114", "E117", "D206", "D300", "Q000",
          "Q001", "Q002", "Q003", "COM812", "COM819",
          "ISC001", "ISC002", "S311"]

[tool.ruff.lint.per-file-ignores]
# Ignore some rules for tests
# https://github.com/astral-sh/ruff/issues/4368#issue-1705468153
"tests/**/*.py" = ["S101", "ARG", "FBT"]
# Ignore all rules for generated about file
"src/vulcan_core/__about__.py" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.deptry.package_module_name_map]
"langchain" = "langchain_core"

[tool.pyright]
typeCheckingMode = "basic"
reportUndefinedVariable = false

[tool.pytest.ini_options]
minversion = "8.3"
required_plugins = ["pytest-cov"]
pythonpath = ["src"]
addopts = "-rA --showlocals --color=yes --tb=short -q --cov-report=html --cov=src"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "default:::tests",
    "default:::vulcan_core",
]

[tool.coverage.run]
source = ["src"]
branch = true # Could be an issue if true for native decoration: https://github.com/microsoft/vscode-python/issues/24156

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "lab"},
  {include-group = "tools"},
]
lint = [
    "bandit==1.9.*",
    "deptry==0.24.*",
    "ruff==0.15.*",
    "pyright[nodejs]==1.1.408",
]
test = [
    "pytest==9.0.*",
    "pytest-asyncio==1.3.*",
    "pytest-timeout==2.4.*",
    "pytest-cov==7.0.*",
    "pytest-xdist==3.8.*",
    "doppler-env==0.3.*",
    "langchain-chroma==1.1.*"
]
lab = [
    "ipykernel==6.*",
    "ipywidgets==8.1.*",
]
tools = [
    "tldr>=3",
    "twine>=6.1,<6.3",
    "rust-just==1.46.*"
]
